syntax = "proto3";
option go_package = "github.com/adnpa/IM/pkg/pb/pb_friend";
import "pb_ws.proto";

service friend{
  //  获取好友信息
  rpc getFriendsInfo(GetFriendsInfoReq) returns(GetFriendInfoResp);
  //  申请添加好友
  rpc addFriend(AddFriendReq) returns(server_api_params.CommonResp);
  //  获取申请列表
  rpc getFriendApplyList(GetFriendApplyReq) returns(GetFriendApplyResp);
  //获取自己的申请列表
  rpc getSelfApplyList(GetFriendApplyReq) returns(GetFriendApplyResp);
  //  获取好友列表
  rpc getFriendList(getFriendListReq) returns(getFriendListResp);

  //  拉入黑名单
  rpc addBlacklist(AddBlacklistReq) returns(server_api_params.CommonResp);
  //  移除黑名单
  rpc removeBlacklist(RemoveBlacklistReq) returns(server_api_params.CommonResp);
  //  是否是好友
  rpc isFriend(IsFriendReq) returns(IsFriendResp);
  //  是否在黑名单
  rpc isInBlackList(IsInBlackListReq) returns(IsInBlackListResp);
  //  获取黑名单
  rpc getBlacklist(GetBlacklistReq) returns(GetBlacklistResp);

  //  删除好友
  rpc deleteFriend(DeleteFriendReq) returns(server_api_params.CommonResp);
  //  获取添加好友结果
  rpc addFriendResponse(AddFriendResponseReq) returns(server_api_params.CommonResp);
  // 设置备注
  rpc setFriendComment(SetFriendCommentReq) returns(server_api_params.CommonResp);

  rpc ImportFriend(ImportFriendReq)  returns(ImportFriendResp);
}

message GetFriendsInfoReq{
  string uid = 1;
  string OperationID = 2;
  string Token = 3;
}
message GetFriendInfoResp{
  int32  errorCode = 1;
  string errorMsg = 2;
  GetFriendData Data = 3;
}

message AddFriendReq{
  string   uid = 1;
  string  OperationID = 2;
  string  Token = 3;
  string  ReqMessage = 4;
}


message ImportFriendReq{
  repeated string   uidList = 1;
  string  OperationID = 2;
  string  Token = 3;
  string OwnerUid = 4;
}
message ImportFriendResp{
  server_api_params.CommonResp commonResp = 1;
  repeated string failedUidList = 2;
}

message GetFriendApplyReq{
  string OperationID = 1;
  string Token = 2;
}
message GetFriendApplyResp{
  int32   errorCode = 1;
  string  errorMsg = 2;
  repeated ApplyUserInfo data = 4;
}

message ApplyUserInfo{
  string   uid = 1;
  string   name = 2;
  string   icon = 3;
  int32    gender = 4;
  string   mobile = 5;
  string   birth = 6;
  string   email = 7;
  string   ex = 8;
  int32    flag = 9;
  string   applyTime = 10;
  string   reqMessage = 11;
}


message getFriendListReq{
  string OperationID = 1;
  string Token = 2;
}
message getFriendListResp{
  int32   errorCode = 1;
  string  errorMsg = 2;
  repeated server_api_params.UserInfo data = 3;
}


message AddBlacklistReq{
  string uid = 1;
  string OperationID = 2;
  string Token = 3;
  string OwnerUid = 4;
}


message RemoveBlacklistReq{
  string uid = 1;
  string OperationID = 2;
  string Token = 3;
}


message GetBlacklistReq{
  string OperationID = 1;
  string token = 2;
}
message GetBlacklistResp{
  int32   errorCode = 1;
  string  errorMsg = 2;
  repeated server_api_params.UserInfo data = 3;
}

message IsFriendReq{
  string token = 1;
  string receiveUid = 2;
  string OperationID = 3;
}
message IsFriendResp{
  int32   errorCode = 1;
  string  errorMsg = 2;
  int32   shipType = 3;
}
message IsInBlackListReq{
  string sendUid = 1;
  string receiveUid = 2;
  string OperationID = 3;
}
message IsInBlackListResp{
  int32   errorCode = 1;
  string  errorMsg = 2;
  bool    response = 3;
}

message DeleteFriendReq{
  string uid = 1;
  string OperationID = 2;
  string Token = 3;
}


message AddFriendResponseReq{
  string uid = 1;
  int32  flag = 2;
  string OperationID = 3;
  string Token = 4;
}

message SetFriendCommentReq{
  string uid = 1;
  string operationID = 2;
  string comment = 3;
  string token = 4;
}


// ====================================

message GetFriendData{
  string uid = 1;
  string icon = 2;
  string name = 3;
  int32 gender = 4;
  string mobile = 5;
  string birth = 6;
  string email = 7;
  string ex = 8;
  string comment = 9;
  int32  isFriend = 10;
  int32 isInBlackList = 11;
}
